--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:id="@+id/home"
+        android:enabled="true"
+        android:title="Ana Sayfa"
+        android:icon="@drawable/baseline_home_24"/>
+    <item
+        android:id="@+id/profile"
+        android:enabled="true"
+        android:title="Profil"
+        android:iconTint="#1A9AAF"
+        android:icon="@drawable/baseline_person_24"/>
 </menu>
