--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,6 +4,7 @@
         android:id="@+id/home"
         android:enabled="true"
         android:title="Ana Sayfa"
+        android:iconTint="#1A9AAF"
         android:icon="@drawable/baseline_home_24"/>
     <item
         android:id="@+id/profile"
