--- a/android/app/src/main/res/layout/activity_academician.xml
+++ b/android/app/src/main/res/layout/activity_academician.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:paddingBottom="100dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -20,7 +19,6 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="8dp"
             android:paddingBottom="8dp">
 
 
@@ -30,7 +28,6 @@
                 android:layout_marginBottom="40dp"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
-                android:paddingTop="8dp"
                 android:paddingBottom="8dp">
 
                 <!-- Header -->
@@ -99,9 +96,9 @@
                             android:layout_height="150dp">
 
                             <ImageView
-                                android:id="@+id/image1"
-                                android:layout_width="120dp"
-                                android:layout_height="120dp"
+                                android:id="@+id/imgUser"
+                                android:layout_width="125dp"
+                                android:layout_height="125dp"
                                 android:layout_gravity="center"
                                 android:background="@drawable/rounded_img"
                                 android:clipToOutline="true"
@@ -124,18 +121,20 @@
                         </FrameLayout>
 
                         <TextView
+                            android:id="@+id/txtName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
+                            android:layout_marginTop="15dp"
                             android:text="Dr. Öğr. Üyesi Başak TUNA"
                             android:textColor="#000000"
-                            android:textSize="20sp"
+                            android:textSize="21sp"
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/txtEmail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="5dp"
                             android:text="basaktuna@ahievran.edu.tr"
                             android:textColor="#615C5C"
                             android:textSize="16sp" />
@@ -147,12 +146,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="16dp"
                     android:onClick="personalInfo"
                     app:cardBackgroundColor="@android:color/white"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="2dp"
+                    app:itemIconTint="@color/bottom_nav_icon_color"
+                    app:itemTextColor="@color/bottom_nav_icon_color"
                     app:strokeColor="@android:color/transparent"
                     app:strokeWidth="0dp">
 
@@ -594,7 +595,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="50dp"
+                    android:layout_marginBottom="30dp"
                     android:onClick="previousEducationInfo"
                     app:cardBackgroundColor="@android:color/white"
                     app:cardCornerRadius="16dp"
@@ -631,7 +632,17 @@
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
 
-
+                <TextView
+                    android:id="@+id/signOutText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="40dp"
+                    android:text="Çıkış Yap"
+                    android:textSize="18sp"
+                    android:onClick="signOut"
+                    android:textColor="#2196F3"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
@@ -640,14 +651,14 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:itemIconSize="23dp"
+        android:layout_height="120dp"
+        app:itemIconSize="22dp"
         app:itemIconTint="#1A9AAF"
         app:itemTextColor="#1A9AAF"
         android:layout_gravity="bottom"
         android:background="#FFFFFF"
         app:menu="@menu/bottom_nav_menu" />
-    
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
