--- a/android/app/src/main/res/layout/activity_contact_info.xml
+++ b/android/app/src/main/res/layout/activity_contact_info.xml
@@ -107,6 +107,23 @@
                     tools:layout_editor_absoluteY="211dp" />
 
                 <EditText
+                    android:id="@+id/corporateNumber"
+                    android:layout_width="360dp"
+                    android:layout_height="54dp"
+                    android:layout_gravity="center"
+                    android:layout_marginVertical="10dp"
+                    android:background="@drawable/edittext_bg"
+                    android:hint="Kurumsal Telefon Numarası"
+                    android:inputType="number"
+                    android:padding="12dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#999999"
+                    android:textSize="16sp"
+                    android:textStyle="normal"
+                    tools:layout_editor_absoluteX="35dp"
+                    tools:layout_editor_absoluteY="211dp" />
+
+                <EditText
                     android:id="@+id/email"
                     android:layout_width="360dp"
                     android:layout_height="54dp"
