--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,12 +4,12 @@
         android:id="@+id/home"
         android:enabled="true"
         android:title="Ana Sayfa"
-        android:iconTint="#1A9AAF"
+        android:iconTint="#999999"
         android:icon="@drawable/baseline_home_24"/>
     <item
         android:id="@+id/profile"
         android:enabled="true"
         android:title="Profil"
-        android:iconTint="#1A9AAF"
+        android:iconTint="#999999"
         android:icon="@drawable/baseline_person_24"/>
 </menu>
