--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,3 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="BottomNavText" parent="TextAppearance.AppCompat.Caption">
+        <item name="android:paddingTop">10dp</item>  <!-- ikon ile yazı arası -->
+    </style>
+
 </resources>
