updated sign_up xml

--- a/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/android/app/src/main/res/layout/activity_sign_up.xml
@@ -195,7 +195,7 @@
             android:backgroundTint="#FFFFFF"
             android:elevation="8dp"
             android:fontFamily="monospace"
-            android:onClick="gotoLogin"
+            android:onClick="goPrevPage"
             android:text="Geri Dön"
             android:textColor="#F06E1B"
             android:textSize="15sp"
