--- a/android/app/src/main/res/layout/activity_academician.xml
+++ b/android/app/src/main/res/layout/activity_academician.xml
@@ -89,7 +89,7 @@
                         android:gravity="center_horizontal"
                         android:orientation="vertical"
                         android:paddingTop="5dp"
-                        android:paddingBottom="20dp">
+                        android:paddingBottom="10dp">
 
                         <FrameLayout
                             android:layout_width="170dp"
@@ -121,11 +121,21 @@
                         </FrameLayout>
 
                         <TextView
-                            android:id="@+id/txtName"
+                            android:id="@+id/txtDegree"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="15dp"
-                            android:text="Dr. Öğr. Üyesi Başak TUNA"
+                            android:text="Doktor Öğretim Üyesi"
+                            android:textColor="#000000"
+                            android:textSize="21sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/txtName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="Başak TUNA"
                             android:textColor="#000000"
                             android:textSize="21sp"
                             android:textStyle="bold" />
