--- a/android/app/src/main/res/layout/fragment_firm_info.xml
+++ b/android/app/src/main/res/layout/fragment_firm_info.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:background="#EFEEF5"
-    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.EducationActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#EFEEF5"
+    android:fitsSystemWindows="true"
+    tools:context=".view.FirmInfoFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        app:cardBackgroundColor="#1A9AAF"
+        app:cardBackgroundColor="#1a9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,13 +24,13 @@
         app:strokeWidth="0dp">
 
         <ImageView
+            android:id="@+id/goToBack"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:onClick="goToBack"
-            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
-            tools:ignore="OnClick" />
+            app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
             android:layout_width="match_parent"
@@ -39,7 +38,7 @@
             android:layout_gravity="center"
             android:layout_margin="12dp"
             android:gravity="center"
-            android:text="Verebileceği Eğitimler"
+            android:text="Firma Bilgisi Ve Çalışma Alanı"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -78,62 +77,51 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
 
-                <TextView
-                    android:id="@+id/textViewEducation"
-                    android:layout_width="275dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="5dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="169dp"
-                    android:text="Verebileceğiniz Eğitimleri Giriniz"
-                    android:textColor="#000000"
-                    android:textSize="17sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
-
-                <TextView
-                    android:id="@+id/warning"
-                    android:layout_width="320dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="169dp"
-                    android:text="Lütfen verileri tek bir şekilde girip ekle butonuna basınız!"
-                    android:textColor="#8A8585"
-                    android:textSize="12sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
 
                 <EditText
-                    android:id="@+id/educationOfArea"
+                    android:id="@+id/firmName"
                     android:layout_width="360dp"
-                    android:layout_height="100dp"
+                    android:layout_height="54dp"
                     android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginVertical="7dp"
                     android:background="@drawable/edittext_bg"
+                    android:hint="Firma Adı"
+                    android:inputType="text"
                     android:padding="12dp"
                     android:textColor="#000000"
+                    android:textColorHint="#999999"
                     android:textSize="16sp"
                     android:textStyle="normal"
-                    android:inputType="textMultiLine"
-                    android:gravity="start|top" />
+                    tools:layout_editor_absoluteX="35dp"
+                    tools:layout_editor_absoluteY="211dp" />
 
-
-
+                <EditText
+                    android:id="@+id/companyWorkArea"
+                    android:layout_width="360dp"
+                    android:layout_height="54dp"
+                    android:layout_gravity="center"
+                    android:layout_marginVertical="7dp"
+                    android:background="@drawable/edittext_bg"
+                    android:hint="Firma Çalışma Alanı"
+                    android:inputType="text"
+                    android:padding="12dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#999999"
+                    android:textSize="16sp"
+                    android:textStyle="normal"
+                    tools:layout_editor_absoluteX="35dp"
+                    tools:layout_editor_absoluteY="211dp" />
 
                 <Button
-                    android:id="@+id/btnAddEducationInfo"
+                    android:id="@+id/btnAdd"
                     android:layout_width="360dp"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
-                    android:layout_marginVertical="20dp"
+                    android:layout_marginVertical="7dp"
                     android:backgroundTint="#1A9AAF"
                     android:elevation="8dp"
                     android:fontFamily="monospace"
-                    android:onClick="professionSave"
+                    android:onClick="contactSave"
                     android:text="Ekle"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
@@ -150,23 +138,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="7dp"
-                    android:layout_marginStart="15dp"
-                    android:text="Verilen Eğitimler"
+                    android:text="Firma Bilgilerim"
                     android:textColor="#000000"
                     android:textSize="17sp"/>
 
                 <LinearLayout
-                    android:id="@+id/educationInfoContainer"
+                    android:id="@+id/firmContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical" />
 
 
             </LinearLayout>
-
-
-
-
 
         </LinearLayout>
     </ScrollView>
