--- a/android/app/src/main/res/layout/fragment_previous_educations.xml
+++ b/android/app/src/main/res/layout/fragment_previous_educations.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:background="#EFEEF5"
-    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.PreviousEducationActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
+    android:background="#EFEEF5"
+    tools:context=".view.PreviousEducationsFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
@@ -25,11 +24,11 @@
         app:strokeWidth="0dp">
 
         <ImageView
+            android:id="@+id/goToBack"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
-            android:onClick="goToBack"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24"
             tools:ignore="OnClick" />
 
@@ -168,5 +167,6 @@
 
         </LinearLayout>
     </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
