--- a/android/app/src/main/res/layout/activity_academician.xml
+++ b/android/app/src/main/res/layout/activity_academician.xml
@@ -6,9 +6,16 @@
     android:layout_height="match_parent"
     android:background="#EFEEF5">
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="120dp" />
+
+
     <!-- Kaydırılabilir içerik -->
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/scrollView"
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
