--- a/android/app/src/main/res/layout/fragment_personal_info.xml
+++ b/android/app/src/main/res/layout/fragment_personal_info.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true"
     android:background="#EFEEF5"
     tools:context=".view.PersonalInfoFragment">
 
@@ -12,7 +11,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="75dp"
         app:cardBackgroundColor="#1A9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
@@ -29,6 +28,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
